--- a/Bs5.ipynb
+++ b/Bs5.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "644d214a",
+   "id": "f8e33235",
    "metadata": {},
    "source": [
     "#help(str)\n",
-    "#print(dir(str))"
+    "#print(dir(str))\n",
+    "\n",
+    "# String depth"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7c0949ae",
+   "id": "8870c99e",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f1d524e",
+   "id": "01d308a2",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4df6349",
+   "id": "8c64381a",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3bace255",
+   "id": "c01b4674",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "939b7467",
+   "id": "10c16c9a",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "256b48c4",
+   "id": "331ebb21",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9bc4cae2",
+   "id": "3362ebe5",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fcac5ae6",
+   "id": "e4adce03",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "700cf7af",
+   "id": "c6782874",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b8a643ce",
+   "id": "b63b8d83",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5c591be6",
+   "id": "e1705dd6",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2dc1e770",
+   "id": "fda8e655",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6c3d8f43",
+   "id": "7431e1a4",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77aa2206",
+   "id": "3923f2ef",
    "metadata": {},
    "source": [
     "* Find if word exist in T and print the index of that word"
@@ -278,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b4078c5b",
+   "id": "16654a9a",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1c23c0c4",
+   "id": "5ded3118",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "827e562c",
+   "id": "2a9cfef8",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c0d7aa39",
+   "id": "9616b6ce",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0436aaba",
+   "id": "c2ff8568",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cbe9ec2e",
+   "id": "7dfd65de",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e86f8b84",
+   "id": "49fe6082",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7a66f32f",
+   "id": "acc22513",
    "metadata": {},
    "outputs": [
     {
@@ -437,32 +439,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "1c22c3c8",
+   "execution_count": 34,
+   "id": "3a10352c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'bool' object has no attribute 'replace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-654edf741e32>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'html, css, python, html'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mr1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'html'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'HTML5'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'bool' object has no attribute 'replace'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTML5, css, python, HTML5\n"
      ]
     }
    ],
    "source": [
     "r = 'html, css, python, html'\n",
-    "r1 = s.replace('html', 'HTML5')\n",
+    "r1 = r.replace('html', 'HTML5')\n",
     "print(r1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbe727a",
+   "id": "288c7976",
    "metadata": {},
    "outputs": [],
    "source": []
